@@ -1,6 +1,7 @@
 2010-06-03  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
 	* Fixed bug #10124: Outdated entry in tx_realurl_uniqaliase should throw a 404 error
+	* Fixed bug #13993: valueMaps: noMatch:bypass removes the parameter from the url
 
 2010-06-02  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
